fixed some broken styles

--- a/src/sass/_search.scss
+++ b/src/sass/_search.scss
@@ -79,6 +79,12 @@
     }
 }
 
+.hero-container{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
 @media (min-width: 728px){
     .searcher{
 
